Fix a crash when selecting reference image with default tool

BUG:399641